# Spore

./: .gitignore  README.md  index.md  program.md  pyproject.toml  release-manifest.json
browser-sdk/: README.md  package-lock.json  package.json
browser-sdk/src/: api.mjs  artifact.mjs  bootstrap.mjs  challenge.mjs  client.mjs  index.d.ts  index.mjs  init.mjs  llm.mjs  node.mjs  run.mjs  storage.mjs  submission.mjs  wallet.mjs
js-cli/: README.md  package-lock.json  package.json
js-cli/src/: api.mjs  challenge.mjs  cli.mjs  config.mjs  detect.mjs
misc/: generate_release_manifest.py
spec/: protocol.md
spore/: __init__.py  agent.py  artifact_sync.py  challenge.py  challenge_state.py  cli.py  client_api.py  client_auth.py  client_challenge.py  client_cli.py  client_detect.py  client_init.py  client_llm.py  client_store.py  compile_policy.py  daemon.py  gossip.py  gpu.py  graph.py  llm.py  loop.py  node.py  operator.py  peer_sync.py  profile.py  proposal_policy.py  query.py  record.py  reputation.py  runner.py  task.py  task_cli.py  task_store.py  training_runtime.py  verify.py  wire.py
spore/explorer/: cache.py  feed.py  routes.py  server.py  state.py
spore/workspace/: train.py
test/: test_client_onboarding.py  test_client_store.py  test_compile_policy.py  test_daemon.py  test_explorer.py  test_gossip.py  test_gpu.py  test_integration.py  test_llm.py  test_loop.py  test_migration.py  test_node.py  test_operator.py  test_profile.py  test_proposal_policy.py  test_release_manifest.py  test_runner.py  test_task.py  test_training_runtime.py  test_verify.py
(+12 files in other folders)
